[tool.poetry]
name = "adversarial-search-mnk-games"
version = "0.1.0"
description = ""
authors = ["Marta <marta.wolinska16@imperial.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
dill = "^0.3.6"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
